--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "Jest --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.4",
     "@types/jest": "^29.2.5",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
